Change way to runner

--- a/index.html
+++ b/index.html
@@ -15,20 +15,16 @@
         {
           name: 'green-button',
           weight: 1,
-          run: function() {
-            document.getElementById('label').innerHTML = 'SIDE A';
-            document.getElementById('myButton').style.background = '#0F0';
-          }
         },
         {
           name: 'red-button',
           weight: 1,
-          run: function() {
-            document.getElementById('label').innerHTML = 'SIDE B';
-            document.getElementById('myButton').style.background = '#F00';
-          }
         }
-      ]
+      ],
+      run: function(option) {
+        document.getElementById('label').innerHTML = `SIDE ${option.name}`;
+        document.getElementById('myButton').style.background = option.name === 'green-button' ? '#0F0' : '#F00';
+      }
     });
   </script>
 </body>
